[package]
name = "tui-textbox"
version = "0.1.0"
authors = ["zchira"]
license = "GPLv3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
# clipboard = ["dep:clipboard"]

[dependencies]
ratatui = "0.26.2"
crossterm = { version = "0.27.0" }
# clipboard = { version = "0.5.0", optional = true }
