[package]
name = "tui-textbox"
version = "0.4.0"
authors = ["zchira"]
license = "GPL-3.0"
description = "ratatui stateful widget"
homepage = "https://github.com/zchira/tui-textbox"
repository = "https://github.com/zchira/tui-textbox"
readme = "README.md"
keywords = ["ratatui", "tui", "tui-textbox", "widget"]
categories = ["command-line-interface"]
edition = "2021"

[features]
default = []

[dependencies]
ratatui = "^0.29.0"
crossterm = { version = "^0.28.1" }
